# billy

./: .gitignore  README.md  pyproject.toml
server/: .env.template  main.py
server/congress/: api.py
server/dependencies/: congress.py  gemini.py
server/llm/: gemini_llm_provider.py  llm_provider.py
server/routers/: bill.py
